# Registro-Yape-BCP

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  setup_gmail.py
src/: config.py  email_parser.py  gmail_client.py  main.py  models.py  sheets_client.py
